src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> teigilist
Rule 1     teigilist -> teigi
Rule 2     teigilist -> teigilist teigi
Rule 3     paramlist -> param
Rule 4     paramlist -> paramlist CONMA param
Rule 5     param -> TYPE ID
Rule 6     param -> TYPE
Rule 7     bun -> ID EQUALS LAMDA KAKKO paramlist KOKKA LBRACE bunlist RBRACE SEMI
Rule 8     bun -> EXIT KAKKO shiki KOKKA SEMI
Rule 9     bun -> ID KAKKO shiki KOKKA SEMI
Rule 10    bun -> INLINE KAKKO shiki KOKKA SEMI
Rule 11    teigi -> STR
Rule 12    bun -> ID EQUALS ID SEMI
Rule 13    teigi -> TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
Rule 14    teigi -> TYPE ID yaji TYPE LBRACE bunlist RBRACE
Rule 15    teigi -> STRUCT ID LBRACE teigilist RBRACE
Rule 16    class -> classf
Rule 17    class -> class classf
Rule 18    teigi -> CLASS ID LBRACE class RBRACE
Rule 19    teigi -> INCLUDE shiki PIRIOD shiki
Rule 20    classf -> ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
Rule 21    bun -> ID PIRIOD ID KAKKO shiki KOKKA SEMI
Rule 22    bun -> PASS SEMI
Rule 23    bunlist -> bun
Rule 24    bunlist -> bunlist bun
Rule 25    bun -> TYPE ID EQUALS shiki SEMI
Rule 26    bun -> TYPE ID EQUALS LISL shiki LISR SEMI
Rule 27    bun -> TYPE ID EQUALS ID LISL NUMBER LISR SEMI
Rule 28    bun -> ID EQUALS LISL LISR SEMI
Rule 29    bun -> ID EQUALS ID OPTASU NUMBER SEMI
Rule 30    bun -> ID EQUALS ID OPKAKERU NUMBER SEMI
Rule 31    bun -> ID EQUALS ID OPMIN NUMBER SEMI
Rule 32    bun -> ID EQUALS ID OPWARU NUMBER SEMI
Rule 33    shiki -> TYPEF KAKKO shiki KOKKA
Rule 34    shiki -> TYPE KAKKO shiki KOKKA
Rule 35    shiki -> RESERV KAKKO shiki KOKKA
Rule 36    shiki -> FIB KAKKO shiki KOKKA
Rule 37    bun -> RETURN shiki SEMI
Rule 38    bun -> IF hikaku LBRACE bunlist RBRACE
Rule 39    bun -> IF hikaku LBRACE bunlist RBRACE ELSE LBRACE bunlist RBRACE
Rule 40    bun -> WHILE hikaku LBRACE bunlist RBRACE
Rule 41    hikaku -> shiki
Rule 42    hikaku -> hikaku EQOP shiki
Rule 43    hikaku -> hikaku dainari shiki
Rule 44    hikaku -> hikaku syounari shiki
Rule 45    shiki -> NUMBER
Rule 46    shiki -> ID
Rule 47    shiki -> TYPE
Rule 48    shiki -> STR
Rule 49    bun -> PASS
Rule 50    bun -> PASS KAKKO KOKKA
Rule 51    bun -> PASS KAKKO PASS KOKKA SEMI
Rule 52    shiki -> LEN KAKKO shiki KOKKA
Rule 53    bun -> ID LISL shiki LISR EQUALS shiki SEMI
Rule 54    shiki -> OPMIN NUMBER
Rule 55    shiki -> shiki CONMA shiki
Rule 56    shiki -> shiki OPTASU shiki
Rule 57    shiki -> shiki OPKAKERU shiki
Rule 58    shiki -> shiki OPMIN shiki
Rule 59    shiki -> shiki OPWARU shiki
Rule 60    shiki -> KAKKO shiki KOKKA
Rule 61    shiki -> shiki CONMA ID
Rule 62    bun -> RESERV ID LISL NUMBER LISR EQUALS STR SEMI
Rule 63    bun -> RESERV ID LISL ID LISR EQUALS STR SEMI
Rule 64    bun -> RESERV ID LISL NUMBER LISR EQUALS ID SEMI
Rule 65    bun -> RESERV ID LISL ID LISR EQUALS ID SEMI
Rule 66    bun -> RESERV KAKKO shiki KOKKA SEMI
Rule 67    shiki -> ID KAKKO shiki KOKKA
Rule 68    shiki -> ID KAKKO KOKKA
Rule 69    shiki -> ID LISL shiki LISR
Rule 70    bun -> TYPE LBRACE letlist RBRACE SEMI
Rule 71    bun -> GLOBAL TYPE LBRACE letlist RBRACE SEMI
Rule 72    letlist -> ID EQUALS STR SEMI
Rule 73    letlist -> ID EQUALS NUMBER SEMI
Rule 74    letlist -> letlist ID EQUALS STR SEMI
Rule 75    letlist -> letlist ID EQUALS NUMBER SEMI
Rule 76    bun -> ID EQUALS ID OPTASU STR SEMI
Rule 77    bun -> ID EQUALS STR OPTASU ID SEMI
Rule 78    bun -> ID OPTASU OPTASU SEMI
Rule 79    bun -> STR OPTASU OPTASU SEMI

Terminals, with rules where they appear

CLASS                : 18
CONMA                : 4 55 61
ELSE                 : 39
EQOP                 : 42
EQUALS               : 7 12 25 26 27 28 29 30 31 32 53 62 63 64 65 72 73 74 75 76 77
EXIT                 : 8
FIB                  : 36
GLOBAL               : 71
ID                   : 5 7 9 12 12 13 14 15 18 20 21 21 25 26 27 27 28 29 29 30 30 31 31 32 32 46 53 61 62 63 63 64 64 65 65 65 67 68 69 72 73 74 75 76 76 77 77 78
IF                   : 38 39
INCLUDE              : 19
INLINE               : 10
KAKKO                : 7 8 9 10 13 20 21 33 34 35 36 50 51 52 60 66 67 68
KOKKA                : 7 8 9 10 13 20 21 33 34 35 36 50 51 52 60 66 67 68
LAMDA                : 7
LBRACE               : 7 13 14 15 18 20 38 39 39 40 70 71
LEN                  : 52
LISL                 : 26 27 28 53 62 63 64 65 69
LISR                 : 26 27 28 53 62 63 64 65 69
NUMBER               : 27 29 30 31 32 45 54 62 64 73 75
OPKAKERU             : 30 57
OPMIN                : 31 54 58
OPTASU               : 29 56 76 77 78 78 79 79
OPWARU               : 32 59
PASS                 : 22 49 50 51 51
PIRIOD               : 19 21
RBRACE               : 7 13 14 15 18 20 38 39 39 40 70 71
RESERV               : 35 62 63 64 65 66
RETURN               : 37
SEMI                 : 7 8 9 10 12 21 22 25 26 27 28 29 30 31 32 37 51 53 62 63 64 65 66 70 71 72 73 74 75 76 77 78 79
STR                  : 11 48 62 63 72 74 76 77 79
STRUCT               : 15
TYPE                 : 5 6 13 13 14 14 20 25 26 27 34 47 70 71
TYPEF                : 33
WHILE                : 40
dainari              : 43
error                : 
syounari             : 44
yaji                 : 13 14 20

Nonterminals, with rules where they appear

bun                  : 23 24
bunlist              : 7 13 14 20 24 38 39 39 40
class                : 17 18
classf               : 16 17
hikaku               : 38 39 40 42 43 44
letlist              : 70 71 74 75
param                : 3 4
paramlist            : 4 7 13 20
shiki                : 8 9 10 19 19 21 25 26 33 34 35 36 37 41 42 43 44 52 53 53 55 55 56 56 57 57 58 58 59 59 60 61 66 67 69
teigi                : 1 2
teigilist            : 2 15 0

Parsing method: LALR

state 0

    (0) S' -> . teigilist
    (1) teigilist -> . teigi
    (2) teigilist -> . teigilist teigi
    (11) teigi -> . STR
    (13) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (14) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (15) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (18) teigi -> . CLASS ID LBRACE class RBRACE
    (19) teigi -> . INCLUDE shiki PIRIOD shiki

    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigilist                      shift and go to state 1
    teigi                          shift and go to state 2

state 1

    (0) S' -> teigilist .
    (2) teigilist -> teigilist . teigi
    (11) teigi -> . STR
    (13) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (14) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (15) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (18) teigi -> . CLASS ID LBRACE class RBRACE
    (19) teigi -> . INCLUDE shiki PIRIOD shiki

    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigi                          shift and go to state 8

state 2

    (1) teigilist -> teigi .

    STR             reduce using rule 1 (teigilist -> teigi .)
    TYPE            reduce using rule 1 (teigilist -> teigi .)
    STRUCT          reduce using rule 1 (teigilist -> teigi .)
    CLASS           reduce using rule 1 (teigilist -> teigi .)
    INCLUDE         reduce using rule 1 (teigilist -> teigi .)
    $end            reduce using rule 1 (teigilist -> teigi .)
    RBRACE          reduce using rule 1 (teigilist -> teigi .)


state 3

    (11) teigi -> STR .

    STR             reduce using rule 11 (teigi -> STR .)
    TYPE            reduce using rule 11 (teigi -> STR .)
    STRUCT          reduce using rule 11 (teigi -> STR .)
    CLASS           reduce using rule 11 (teigi -> STR .)
    INCLUDE         reduce using rule 11 (teigi -> STR .)
    $end            reduce using rule 11 (teigi -> STR .)
    RBRACE          reduce using rule 11 (teigi -> STR .)


state 4

    (13) teigi -> TYPE . ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (14) teigi -> TYPE . ID yaji TYPE LBRACE bunlist RBRACE

    ID              shift and go to state 9


state 5

    (15) teigi -> STRUCT . ID LBRACE teigilist RBRACE

    ID              shift and go to state 10


state 6

    (18) teigi -> CLASS . ID LBRACE class RBRACE

    ID              shift and go to state 11


state 7

    (19) teigi -> INCLUDE . shiki PIRIOD shiki
    (33) shiki -> . TYPEF KAKKO shiki KOKKA
    (34) shiki -> . TYPE KAKKO shiki KOKKA
    (35) shiki -> . RESERV KAKKO shiki KOKKA
    (36) shiki -> . FIB KAKKO shiki KOKKA
    (45) shiki -> . NUMBER
    (46) shiki -> . ID
    (47) shiki -> . TYPE
    (48) shiki -> . STR
    (52) shiki -> . LEN KAKKO shiki KOKKA
    (54) shiki -> . OPMIN NUMBER
    (55) shiki -> . shiki CONMA shiki
    (56) shiki -> . shiki OPTASU shiki
    (57) shiki -> . shiki OPKAKERU shiki
    (58) shiki -> . shiki OPMIN shiki
    (59) shiki -> . shiki OPWARU shiki
    (60) shiki -> . KAKKO shiki KOKKA
    (61) shiki -> . shiki CONMA ID
    (67) shiki -> . ID KAKKO shiki KOKKA
    (68) shiki -> . ID KAKKO KOKKA
    (69) shiki -> . ID LISL shiki LISR

    TYPEF           shift and go to state 13
    TYPE            shift and go to state 15
    RESERV          shift and go to state 16
    FIB             shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 19
    STR             shift and go to state 20
    LEN             shift and go to state 21
    OPMIN           shift and go to state 22
    KAKKO           shift and go to state 14

    shiki                          shift and go to state 12

state 8

    (2) teigilist -> teigilist teigi .

    STR             reduce using rule 2 (teigilist -> teigilist teigi .)
    TYPE            reduce using rule 2 (teigilist -> teigilist teigi .)
    STRUCT          reduce using rule 2 (teigilist -> teigilist teigi .)
    CLASS           reduce using rule 2 (teigilist -> teigilist teigi .)
    INCLUDE         reduce using rule 2 (teigilist -> teigilist teigi .)
    $end            reduce using rule 2 (teigilist -> teigilist teigi .)
    RBRACE          reduce using rule 2 (teigilist -> teigilist teigi .)


state 9

    (13) teigi -> TYPE ID . KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (14) teigi -> TYPE ID . yaji TYPE LBRACE bunlist RBRACE

    KAKKO           shift and go to state 23
    yaji            shift and go to state 24


state 10

    (15) teigi -> STRUCT ID . LBRACE teigilist RBRACE

    LBRACE          shift and go to state 25


state 11

    (18) teigi -> CLASS ID . LBRACE class RBRACE

    LBRACE          shift and go to state 26


state 12

    (19) teigi -> INCLUDE shiki . PIRIOD shiki
    (55) shiki -> shiki . CONMA shiki
    (56) shiki -> shiki . OPTASU shiki
    (57) shiki -> shiki . OPKAKERU shiki
    (58) shiki -> shiki . OPMIN shiki
    (59) shiki -> shiki . OPWARU shiki
    (61) shiki -> shiki . CONMA ID

    PIRIOD          shift and go to state 27
    CONMA           shift and go to state 28
    OPTASU          shift and go to state 29
    OPKAKERU        shift and go to state 30
    OPMIN           shift and go to state 31
    OPWARU          shift and go to state 32


state 13

    (33) shiki -> TYPEF . KAKKO shiki KOKKA

    KAKKO           shift and go to state 33


state 14

    (60) shiki -> KAKKO . shiki KOKKA
    (33) shiki -> . TYPEF KAKKO shiki KOKKA
    (34) shiki -> . TYPE KAKKO shiki KOKKA
    (35) shiki -> . RESERV KAKKO shiki KOKKA
    (36) shiki -> . FIB KAKKO shiki KOKKA
    (45) shiki -> . NUMBER
    (46) shiki -> . ID
    (47) shiki -> . TYPE
    (48) shiki -> . STR
    (52) shiki -> . LEN KAKKO shiki KOKKA
    (54) shiki -> . OPMIN NUMBER
    (55) shiki -> . shiki CONMA shiki
    (56) shiki -> . shiki OPTASU shiki
    (57) shiki -> . shiki OPKAKERU shiki
    (58) shiki -> . shiki OPMIN shiki
    (59) shiki -> . shiki OPWARU shiki
    (60) shiki -> . KAKKO shiki KOKKA
    (61) shiki -> . shiki CONMA ID
    (67) shiki -> . ID KAKKO shiki KOKKA
    (68) shiki -> . ID KAKKO KOKKA
    (69) shiki -> . ID LISL shiki LISR

    TYPEF           shift and go to state 13
    TYPE            shift and go to state 15
    RESERV          shift and go to state 16
    FIB             shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 19
    STR             shift and go to state 20
    LEN             shift and go to state 21
    OPMIN           shift and go to state 22
    KAKKO           shift and go to state 14

    shiki                          shift and go to state 34

state 15

    (34) shiki -> TYPE . KAKKO shiki KOKKA
    (47) shiki -> TYPE .

    KAKKO           shift and go to state 35
    PIRIOD          reduce using rule 47 (shiki -> TYPE .)
    CONMA           reduce using rule 47 (shiki -> TYPE .)
    OPTASU          reduce using rule 47 (shiki -> TYPE .)
    OPKAKERU        reduce using rule 47 (shiki -> TYPE .)
    OPMIN           reduce using rule 47 (shiki -> TYPE .)
    OPWARU          reduce using rule 47 (shiki -> TYPE .)
    KOKKA           reduce using rule 47 (shiki -> TYPE .)
    STR             reduce using rule 47 (shiki -> TYPE .)
    TYPE            reduce using rule 47 (shiki -> TYPE .)
    STRUCT          reduce using rule 47 (shiki -> TYPE .)
    CLASS           reduce using rule 47 (shiki -> TYPE .)
    INCLUDE         reduce using rule 47 (shiki -> TYPE .)
    $end            reduce using rule 47 (shiki -> TYPE .)
    RBRACE          reduce using rule 47 (shiki -> TYPE .)
    LISR            reduce using rule 47 (shiki -> TYPE .)
    SEMI            reduce using rule 47 (shiki -> TYPE .)
    LBRACE          reduce using rule 47 (shiki -> TYPE .)
    EQOP            reduce using rule 47 (shiki -> TYPE .)
    dainari         reduce using rule 47 (shiki -> TYPE .)
    syounari        reduce using rule 47 (shiki -> TYPE .)


state 16

    (35) shiki -> RESERV . KAKKO shiki KOKKA

    KAKKO           shift and go to state 36


state 17

    (36) shiki -> FIB . KAKKO shiki KOKKA

    KAKKO           shift and go to state 37


state 18

    (45) shiki -> NUMBER .

    PIRIOD          reduce using rule 45 (shiki -> NUMBER .)
    CONMA           reduce using rule 45 (shiki -> NUMBER .)
    OPTASU          reduce using rule 45 (shiki -> NUMBER .)
    OPKAKERU        reduce using rule 45 (shiki -> NUMBER .)
    OPMIN           reduce using rule 45 (shiki -> NUMBER .)
    OPWARU          reduce using rule 45 (shiki -> NUMBER .)
    KOKKA           reduce using rule 45 (shiki -> NUMBER .)
    STR             reduce using rule 45 (shiki -> NUMBER .)
    TYPE            reduce using rule 45 (shiki -> NUMBER .)
    STRUCT          reduce using rule 45 (shiki -> NUMBER .)
    CLASS           reduce using rule 45 (shiki -> NUMBER .)
    INCLUDE         reduce using rule 45 (shiki -> NUMBER .)
    $end            reduce using rule 45 (shiki -> NUMBER .)
    RBRACE          reduce using rule 45 (shiki -> NUMBER .)
    LISR            reduce using rule 45 (shiki -> NUMBER .)
    SEMI            reduce using rule 45 (shiki -> NUMBER .)
    LBRACE          reduce using rule 45 (shiki -> NUMBER .)
    EQOP            reduce using rule 45 (shiki -> NUMBER .)
    dainari         reduce using rule 45 (shiki -> NUMBER .)
    syounari        reduce using rule 45 (shiki -> NUMBER .)


state 19

    (46) shiki -> ID .
    (67) shiki -> ID . KAKKO shiki KOKKA
    (68) shiki -> ID . KAKKO KOKKA
    (69) shiki -> ID . LISL shiki LISR

    PIRIOD          reduce using rule 46 (shiki -> ID .)
    CONMA           reduce using rule 46 (shiki -> ID .)
    OPTASU          reduce using rule 46 (shiki -> ID .)
    OPKAKERU        reduce using rule 46 (shiki -> ID .)
    OPMIN           reduce using rule 46 (shiki -> ID .)
    OPWARU          reduce using rule 46 (shiki -> ID .)
    KOKKA           reduce using rule 46 (shiki -> ID .)
    STR             reduce using rule 46 (shiki -> ID .)
    TYPE            reduce using rule 46 (shiki -> ID .)
    STRUCT          reduce using rule 46 (shiki -> ID .)
    CLASS           reduce using rule 46 (shiki -> ID .)
    INCLUDE         reduce using rule 46 (shiki -> ID .)
    $end            reduce using rule 46 (shiki -> ID .)
    RBRACE          reduce using rule 46 (shiki -> ID .)
    LISR            reduce using rule 46 (shiki -> ID .)
    SEMI            reduce using rule 46 (shiki -> ID .)
    LBRACE          reduce using rule 46 (shiki -> ID .)
    EQOP            reduce using rule 46 (shiki -> ID .)
    dainari         reduce using rule 46 (shiki -> ID .)
    syounari        reduce using rule 46 (shiki -> ID .)
    KAKKO           shift and go to state 38
    LISL            shift and go to state 39


state 20

    (48) shiki -> STR .

    PIRIOD          reduce using rule 48 (shiki -> STR .)
    CONMA           reduce using rule 48 (shiki -> STR .)
    OPTASU          reduce using rule 48 (shiki -> STR .)
    OPKAKERU        reduce using rule 48 (shiki -> STR .)
    OPMIN           reduce using rule 48 (shiki -> STR .)
    OPWARU          reduce using rule 48 (shiki -> STR .)
    KOKKA           reduce using rule 48 (shiki -> STR .)
    STR             reduce using rule 48 (shiki -> STR .)
    TYPE            reduce using rule 48 (shiki -> STR .)
    STRUCT          reduce using rule 48 (shiki -> STR .)
    CLASS           reduce using rule 48 (shiki -> STR .)
    INCLUDE         reduce using rule 48 (shiki -> STR .)
    $end            reduce using rule 48 (shiki -> STR .)
    RBRACE          reduce using rule 48 (shiki -> STR .)
    LISR            reduce using rule 48 (shiki -> STR .)
    SEMI            reduce using rule 48 (shiki -> STR .)
    LBRACE          reduce using rule 48 (shiki -> STR .)
    EQOP            reduce using rule 48 (shiki -> STR .)
    dainari         reduce using rule 48 (shiki -> STR .)
    syounari        reduce using rule 48 (shiki -> STR .)


state 21

    (52) shiki -> LEN . KAKKO shiki KOKKA

    KAKKO           shift and go to state 40


state 22

    (54) shiki -> OPMIN . NUMBER

    NUMBER          shift and go to state 41


state 23

    (13) teigi -> TYPE ID KAKKO . paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (3) paramlist -> . param
    (4) paramlist -> . paramlist CONMA param
    (5) param -> . TYPE ID
    (6) param -> . TYPE

    TYPE            shift and go to state 42

    paramlist                      shift and go to state 43
    param                          shift and go to state 44

state 24

    (14) teigi -> TYPE ID yaji . TYPE LBRACE bunlist RBRACE

    TYPE            shift and go to state 45


state 25

    (15) teigi -> STRUCT ID LBRACE . teigilist RBRACE
    (1) teigilist -> . teigi
    (2) teigilist -> . teigilist teigi
    (11) teigi -> . STR
    (13) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (14) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (15) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (18) teigi -> . CLASS ID LBRACE class RBRACE
    (19) teigi -> . INCLUDE shiki PIRIOD shiki

    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigilist                      shift and go to state 46
    teigi                          shift and go to state 2

state 26

    (18) teigi -> CLASS ID LBRACE . class RBRACE
    (16) class -> . classf
    (17) class -> . class classf
    (20) classf -> . ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE

    ID              shift and go to state 47

    class                          shift and go to state 48
    classf                         shift and go to state 49

state 27

    (19) teigi -> INCLUDE shiki PIRIOD . shiki
    (33) shiki -> . TYPEF KAKKO shiki KOKKA
    (34) shiki -> . TYPE KAKKO shiki KOKKA
    (35) shiki -> . RESERV KAKKO shiki KOKKA
    (36) shiki -> . FIB KAKKO shiki KOKKA
    (45) shiki -> . NUMBER
    (46) shiki -> . ID
    (47) shiki -> . TYPE
    (48) shiki -> . STR
    (52) shiki -> . LEN KAKKO shiki KOKKA
    (54) shiki -> . OPMIN NUMBER
    (55) shiki -> . shiki CONMA shiki
    (56) shiki -> . shiki OPTASU shiki
    (57) shiki -> . shiki OPKAKERU shiki
    (58) shiki -> . shiki OPMIN shiki
    (59) shiki -> . shiki OPWARU shiki
    (60) shiki -> . KAKKO shiki KOKKA
    (61) shiki -> . shiki CONMA ID
    (67) shiki -> . ID KAKKO shiki KOKKA
    (68) shiki -> . ID KAKKO KOKKA
    (69) shiki -> . ID LISL shiki LISR

    TYPEF           shift and go to state 13
    TYPE            shift and go to state 15
    RESERV          shift and go to state 16
    FIB             shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 19
    STR             shift and go to state 20
    LEN             shift and go to state 21
    OPMIN           shift and go to state 22
    KAKKO           shift and go to state 14

    shiki                          shift and go to state 50

state 28

    (55) shiki -> shiki CONMA . shiki
    (61) shiki -> shiki CONMA . ID
    (33) shiki -> . TYPEF KAKKO shiki KOKKA
    (34) shiki -> . TYPE KAKKO shiki KOKKA
    (35) shiki -> . RESERV KAKKO shiki KOKKA
    (36) shiki -> . FIB KAKKO shiki KOKKA
    (45) shiki -> . NUMBER
    (46) shiki -> . ID
    (47) shiki -> . TYPE
    (48) shiki -> . STR
    (52) shiki -> . LEN KAKKO shiki KOKKA
    (54) shiki -> . OPMIN NUMBER
    (55) shiki -> . shiki CONMA shiki
    (56) shiki -> . shiki OPTASU shiki
    (57) shiki -> . shiki OPKAKERU shiki
    (58) shiki -> . shiki OPMIN shiki
    (59) shiki -> . shiki OPWARU shiki
    (60) shiki -> . KAKKO shiki KOKKA
    (61) shiki -> . shiki CONMA ID
    (67) shiki -> . ID KAKKO shiki KOKKA
    (68) shiki -> . ID KAKKO KOKKA
    (69) shiki -> . ID LISL shiki LISR

    ID              shift and go to state 52
    TYPEF           shift and go to state 13
    TYPE            shift and go to state 15
    RESERV          shift and go to state 16
    FIB             shift and go to state 17
    NUMBER          shift and go to state 18
    STR             shift and go to state 20
    LEN             shift and go to state 21
    OPMIN           shift and go to state 22
    KAKKO           shift and go to state 14

    shiki                          shift and go to state 51

state 29

    (56) shiki -> shiki OPTASU . shiki
    (33) shiki -> . TYPEF KAKKO shiki KOKKA
    (34) shiki -> . TYPE KAKKO shiki KOKKA
    (35) shiki -> . RESERV KAKKO shiki KOKKA
    (36) shiki -> . FIB KAKKO shiki KOKKA
    (45) shiki -> . NUMBER
    (46) shiki -> . ID
    (47) shiki -> . TYPE
    (48) shiki -> . STR
    (52) shiki -> . LEN KAKKO shiki KOKKA
    (54) shiki -> . OPMIN NUMBER
    (55) shiki -> . shiki CONMA shiki
    (56) shiki -> . shiki OPTASU shiki
    (57) shiki -> . shiki OPKAKERU shiki
    (58) shiki -> . shiki OPMIN shiki
    (59) shiki -> . shiki OPWARU shiki
    (60) shiki -> . KAKKO shiki KOKKA
    (61) shiki -> . shiki CONMA ID
    (67) shiki -> . ID KAKKO shiki KOKKA
    (68) shiki -> . ID KAKKO KOKKA
    (69) shiki -> . ID LISL shiki LISR

    TYPEF           shift and go to state 13
    TYPE            shift and go to state 15
    RESERV          shift and go to state 16
    FIB             shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 19
    STR             shift and go to state 20
    LEN             shift and go to state 21
    OPMIN           shift and go to state 22
    KAKKO           shift and go to state 14

    shiki                          shift and go to state 53

state 30

    (57) shiki -> shiki OPKAKERU . shiki
    (33) shiki -> . TYPEF KAKKO shiki KOKKA
    (34) shiki -> . TYPE KAKKO shiki KOKKA
    (35) shiki -> . RESERV KAKKO shiki KOKKA
    (36) shiki -> . FIB KAKKO shiki KOKKA
    (45) shiki -> . NUMBER
    (46) shiki -> . ID
    (47) shiki -> . TYPE
    (48) shiki -> . STR
    (52) shiki -> . LEN KAKKO shiki KOKKA
    (54) shiki -> . OPMIN NUMBER
    (55) shiki -> . shiki CONMA shiki
    (56) shiki -> . shiki OPTASU shiki
    (57) shiki -> . shiki OPKAKERU shiki
    (58) shiki -> . shiki OPMIN shiki
    (59) shiki -> . shiki OPWARU shiki
    (60) shiki -> . KAKKO shiki KOKKA
    (61) shiki -> . shiki CONMA ID
    (67) shiki -> . ID KAKKO shiki KOKKA
    (68) shiki -> . ID KAKKO KOKKA
    (69) shiki -> . ID LISL shiki LISR

    TYPEF           shift and go to state 13
    TYPE            shift and go to state 15
    RESERV          shift and go to state 16
    FIB             shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 19
    STR             shift and go to state 20
    LEN             shift and go to state 21
    OPMIN           shift and go to state 22
    KAKKO           shift and go to state 14

    shiki                          shift and go to state 54

state 31

    (58) shiki -> shiki OPMIN . shiki
    (33) shiki -> . TYPEF KAKKO shiki KOKKA
    (34) shiki -> . TYPE KAKKO shiki KOKKA
    (35) shiki -> . RESERV KAKKO shiki KOKKA
    (36) shiki -> . FIB KAKKO shiki KOKKA
    (45) shiki -> . NUMBER
    (46) shiki -> . ID
    (47) shiki -> . TYPE
    (48) shiki -> . STR
    (52) shiki -> . LEN KAKKO shiki KOKKA
    (54) shiki -> . OPMIN NUMBER
    (55) shiki -> . shiki CONMA shiki
    (56) shiki -> . shiki OPTASU shiki
    (57) shiki -> . shiki OPKAKERU shiki
    (58) shiki -> . shiki OPMIN shiki
    (59) shiki -> . shiki OPWARU shiki
    (60) shiki -> . KAKKO shiki KOKKA
    (61) shiki -> . shiki CONMA ID
    (67) shiki -> . ID KAKKO shiki KOKKA
    (68) shiki -> . ID KAKKO KOKKA
    (69) shiki -> . ID LISL shiki LISR

    TYPEF           shift and go to state 13
    TYPE            shift and go to state 15
    RESERV          shift and go to state 16
    FIB             shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 19
    STR             shift and go to state 20
    LEN             shift and go to state 21
    OPMIN           shift and go to state 22
    KAKKO           shift and go to state 14

    shiki                          shift and go to state 55

state 32

    (59) shiki -> shiki OPWARU . shiki
    (33) shiki -> . TYPEF KAKKO shiki KOKKA
    (34) shiki -> . TYPE KAKKO shiki KOKKA
    (35) shiki -> . RESERV KAKKO shiki KOKKA
    (36) shiki -> . FIB KAKKO shiki KOKKA
    (45) shiki -> . NUMBER
    (46) shiki -> . ID
    (47) shiki -> . TYPE
    (48) shiki -> . STR
    (52) shiki -> . LEN KAKKO shiki KOKKA
    (54) shiki -> . OPMIN NUMBER
    (55) shiki -> . shiki CONMA shiki
    (56) shiki -> . shiki OPTASU shiki
    (57) shiki -> . shiki OPKAKERU shiki
    (58) shiki -> . shiki OPMIN shiki
    (59) shiki -> . shiki OPWARU shiki
    (60) shiki -> . KAKKO shiki KOKKA
    (61) shiki -> . shiki CONMA ID
    (67) shiki -> . ID KAKKO shiki KOKKA
    (68) shiki -> . ID KAKKO KOKKA
    (69) shiki -> . ID LISL shiki LISR

    TYPEF           shift and go to state 13
    TYPE            shift and go to state 15
    RESERV          shift and go to state 16
    FIB             shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 19
    STR             shift and go to state 20
    LEN             shift and go to state 21
    OPMIN           shift and go to state 22
    KAKKO           shift and go to state 14

    shiki                          shift and go to state 56

state 33

    (33) shiki -> TYPEF KAKKO . shiki KOKKA
    (33) shiki -> . TYPEF KAKKO shiki KOKKA
    (34) shiki -> . TYPE KAKKO shiki KOKKA
    (35) shiki -> . RESERV KAKKO shiki KOKKA
    (36) shiki -> . FIB KAKKO shiki KOKKA
    (45) shiki -> . NUMBER
    (46) shiki -> . ID
    (47) shiki -> . TYPE
    (48) shiki -> . STR
    (52) shiki -> . LEN KAKKO shiki KOKKA
    (54) shiki -> . OPMIN NUMBER
    (55) shiki -> . shiki CONMA shiki
    (56) shiki -> . shiki OPTASU shiki
    (57) shiki -> . shiki OPKAKERU shiki
    (58) shiki -> . shiki OPMIN shiki
    (59) shiki -> . shiki OPWARU shiki
    (60) shiki -> . KAKKO shiki KOKKA
    (61) shiki -> . shiki CONMA ID
    (67) shiki -> . ID KAKKO shiki KOKKA
    (68) shiki -> . ID KAKKO KOKKA
    (69) shiki -> . ID LISL shiki LISR

    TYPEF           shift and go to state 13
    TYPE            shift and go to state 15
    RESERV          shift and go to state 16
    FIB             shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 19
    STR             shift and go to state 20
    LEN             shift and go to state 21
    OPMIN           shift and go to state 22
    KAKKO           shift and go to state 14

    shiki                          shift and go to state 57

state 34

    (60) shiki -> KAKKO shiki . KOKKA
    (55) shiki -> shiki . CONMA shiki
    (56) shiki -> shiki . OPTASU shiki
    (57) shiki -> shiki . OPKAKERU shiki
    (58) shiki -> shiki . OPMIN shiki
    (59) shiki -> shiki . OPWARU shiki
    (61) shiki -> shiki . CONMA ID

    KOKKA           shift and go to state 58
    CONMA           shift and go to state 28
    OPTASU          shift and go to state 29
    OPKAKERU        shift and go to state 30
    OPMIN           shift and go to state 31
    OPWARU          shift and go to state 32


state 35
